# otveti-mail-ru

./: .env  .gitignore  README.md  config.py  database.py  main.py  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  settings.py
app/crud/: answer.py  question.py  topic.py  user.py
app/models/: __init__.py  answer.py  question.py  refresh_token.py  topic.py  user.py
app/routers/: __init__.py  answer.py  question.py  user.py
app/schemas/: __init__.py  answer.py  question.py  token.py  topic.py  user.py
app/scripts/: seed_topics.py
app/services/: hash_passwords.py  question_service.py  user_service.py
crud/: answer.py  question.py  topic.py  user.py
migrations/: env.py
migrations/versions/: 7e75cc4b5620_initial.py  94a7f67e5bb5_add_updated_time.py
models/: __init__.py  answer.py  question.py  topic.py  user.py
routers/: question.py  user.py
schemas/: __init__.py  token.py
scripts/: seed_topics.py
services/: __init__.py  user_service.py
