[project]
name = "your-project-name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "pydantic>=2.0.0",
    "alembic>=1.13.0",
]